--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
+    "@supabase/supabase-js": "^2.97.0",
+    "autoprefixer": "^10.4.0",
+    "file-saver": "^2.0.5",
+    "firebase": "^10.7.1",
+    "gapi-script": "^1.2.0",
+    "lucide-react": "^0.294.0",
+    "mammoth": "^1.11.0",
+    "postcss": "^8.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "firebase": "^10.7.1",
-    "lucide-react": "^0.294.0",
-    "tailwindcss": "^3.4.0",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0"
+    "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.0"
